	* toolchain/genromfs:  Added support for the genromfs tool

buildroot-1.8 2009-12-21 <spudmonkey@racsa.co.cr>

	* configs/cortexm3-defconfig-4.3.3: Added support for NuttX NXFLAT
	  tools.
	* configs/arm7tdmi-defconfig-4.3.3: Update to arm7tdmi-defconfig-4.2.4.
	  Also builds NuttX NXFLAT tools.
	* configs/m68hc12-defconfig-4.3.3: Update to m68ch11-defconfig.
	* configs/m68hc12-defconfig-3.4.6: There are problems building GCC
	  4.3.3 for the hc12.
	* configs/m32c-defconfig-4.2.4: Added genromfs
	* configs/m32c-defconfig-4.3.3: Update to m32c-defconfig-4.2.4

buildroot-1.9 2011-02-10 <spudmonkey@racsa.co.cr>

	* configs/arm926t-defconfig-4.3.3: update arm926t-defconfig-4.2.4
	* configs/arm926t-defconfig-nxflat: NXFLAT-only configuration for
	  arm926
	* toolchain/gdb/gdb.mk - Remove ncurses dependency from gdb_target target.
	* toolchain/gdb/gdb.mk - Added --disable-werror to GDB configuration line.
	  GDB 6.8 won't build because the tarbal was released with -Werror enabled and
	  the build stops on the first warning.
	* Add support for Freescale m9s12x using binutils 2.18 and gcc 3.3.6 and
	  patches available from http://www.msextra.com/tools courtesy of James
	  Cortina.  Add configs/m9x12x-defconfig-3.3.6.

buildroot-1.10 2011-xx-xx <spudmonkey@racsa.co.cr>

	* Add patch submitted by Dimiter Georgiev to work around problems in building
	  GDB 6.8 with versions of Cygwin > 1.7.
	* configs/i486-defconfig-4.3.3 - Builds an i486 cross development toolchain
	  using gcc 4.3.3.  Why wouldyou want such a thing?  On Linux, of course,
	  such a thing is not needed because you can use the installed GCC to build
	  i486 ELF binaries.  But that will not work under Cygwin!  The Cygwin
	  toolchain (and probably MinGW), build DOS MZ format executables (i.e.,
	  .exe files).  That is probably not usable for most NuttX targets.
	  Instead, you should use this i486-elf-gcc to generate true ELF binaries
	  under Cygwin.
