@@ -36,6 +36,6 @@
 
 define REGISTER
 	@echo "Register: $1"
-	@echo "{ .name = \"$1\", .priority = $2, .stacksize = $3, .main = $4 }," >> ../exec_nuttapp_list.h
-	@echo "EXTERN int $4(int argc, char *argv[]);" >> ../exec_nuttapp_proto.h
+	@echo "{ .name = \"$1\", .priority = $2, .stacksize = $3, .main = $4 }," >> "$(APPDIR)/exec_nuttapp_list.h"
+	@echo "EXTERN int $4(int argc, char *argv[]);" >> "$(APPDIR)/exec_nuttapp_proto.h"
 endef
