@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 18, 2011</p>
+      <p>Last Updated: March 19, 2011</p>
     </td>
   </tr>
 </table>
@@ -2248,6 +2248,8 @@ buildroot-1.10 2011-xx-xx &lt;spudmonkey@racsa.co.cr&gt;
       .exe files).  That is probably not usable for most NuttX targets.
       Instead, you should use this i486-elf-gcc to generate true ELF binaries
       under Cygwin.
+    * Makefile - Alter copy arguements to avoid permissions problems when
+      copying NuttX header files.
 </pre></ul>
 
 <table width ="100%">
